# Grounder

./: .gitignore  CMakeLists.txt  Grounder.kdev4  Messages.sh  README  README.md
BBoxTool/: .spec  BBox.py  Finderbbox-broken.py  Finderbbox-new-windows.py  Finderbbox-new.py  Finderbbox.py  Finderbbox.spec  LabelTool.py  ResetTimer.py  TagMe.py  TagMeInstallerScript.nsi  TagMeMainWindow.py  TagMeRC1.py  TagMeRC2.py  VideoLabelTool.py  VideoProccessing.py  filePackage.py  helpcache.txt  imagedisplay.py  license.rtf  optimized.txt  resizingCanvas.py  setup.py  sidebar.py  yolobbox.py
BBoxTool/Examples/001/Labels/: Cute-Dog-Wallpaper.txt  dog.txt  dogs-wallpaper.txt  labels.txt
BBoxTool/Images/001/: SDK-Build-Test-Develop Config [Jenkins].html  instructions.txt
BBoxTool/Labels/001/: Cute-Dog-Wallpaper.xml  dog.xml  dogs-wallpaper.xml  test.xml  test2.xml  test3.xml
BBoxTool/pyinstaller-hooks/: hook-_tkinter.py  pyi_rth__tkinter.py
icons/Labels/: hi32-apps-grounder.txt  labels.txt
src/: CMakeLists.txt  grounder.cpp  grounder.desktop  grounder.h  grounder.kcfg  grounderui.rc  kGrounderView.cpp  kGrounderView.h  main.cpp  settings.kcfgc
